// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should highlight text on key down arrow down and arrow up  1`] = `
<div>
  <div
    class="searchWrapper  inClusterSite"
  >
    <div>
      <div
        class="backButtonWrapper"
        data-testid="backBtn"
        style="padding-left: 0px;"
      >
        <button>
          <a
            target="_parent"
          >
            <svg
              class="icon leftIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.854 4.646a.5.5 0 010 .708L3.207 8l2.647 2.646a.5.5 0 01-.708.708l-3-3a.5.5 0 010-.708l3-3a.5.5 0 01.708 0z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M2.5 8a.5.5 0 01.5-.5h10.5a.5.5 0 010 1H3a.5.5 0 01-.5-.5z"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </button>
        <p>
          NAV_BACK_BTN_TEXT
        </p>
      </div>
    </div>
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test"
        />
      </div>
      <div
        class="resultContainer"
        data-testid="resultContainer"
      >
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </a>
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer active"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </a>
        <div
          class="result"
        >
          <div
            class=""
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should render correctly with options 1`] = `
<div>
  <div
    class="searchWrapper  inClusterSite"
  >
    <div>
      <div
        class="backButtonWrapper"
        data-testid="backBtn"
        style="padding-left: 0px;"
      >
        <button>
          <a
            target="_parent"
          >
            <svg
              class="icon leftIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.854 4.646a.5.5 0 010 .708L3.207 8l2.647 2.646a.5.5 0 01-.708.708l-3-3a.5.5 0 010-.708l3-3a.5.5 0 01.708 0z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M2.5 8a.5.5 0 01.5-.5h10.5a.5.5 0 010 1H3a.5.5 0 01-.5-.5z"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </button>
        <p>
          NAV_BACK_BTN_TEXT
        </p>
      </div>
    </div>
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test"
        />
      </div>
      <div
        class="resultContainer"
        data-testid="resultContainer"
      >
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer active"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </a>
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </a>
        <div
          class="result"
        >
          <div
            class=""
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test
            </p>
            <p
              class="footer"
            >
              test content...
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should render correctly without options 1`] = `
<div>
  <div
    class="searchWrapper visHidden inClusterSite"
  >
    <div>
      <div
        class="backButtonWrapper"
        data-testid="backBtn"
        style="padding-left: 0px;"
      >
        <button>
          <a
            target="_parent"
          >
            <svg
              class="icon leftIcon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.854 4.646a.5.5 0 010 .708L3.207 8l2.647 2.646a.5.5 0 01-.708.708l-3-3a.5.5 0 010-.708l3-3a.5.5 0 01.708 0z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M2.5 8a.5.5 0 01.5-.5h10.5a.5.5 0 010 1H3a.5.5 0 01-.5-.5z"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </button>
        <p>
          NAV_BACK_BTN_TEXT
        </p>
      </div>
    </div>
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test keyword"
        />
      </div>
      
    </div>
  </div>
</div>
`;
